@startuml
class MainWindow {
    - loginHandler
    - logHandler
    - dataHandler

    - login_btn_Click()
    - show_overlay_btn_Click()
    - hide_overlay_btn_Click()
    - create_new_user_btn_Click()
    - save_new_user_btn_Click()
    - create_new_room_btn_Click()
    - save_new_room_btn_Click()
    - create_new_course_btn_Click()
    - save_new_course_btn_Click()
    - edit_selected_btn_Click()
    - delete_selected_btn_Click()
}

class LoginHandler {
    - _currentUser
    - dataHandler

    -Validate()
    +Login()
    +Logout()
    +IsLoggedId()
    +GetLoggedInUser()
}

class LogHandler {
    - filePath

    +NewLogEntry()
    +ReadLogEntries()
}


class DbSettings {
    + DbServerId
    + AuthType
    + Username
    + Password

    + SaveToJson()
    + ReadFromJson()
}

class DataHandler {
    + msSqlConnection()
    + createUser()
    + createRoom()
    + createCourse()
    + getData()
}

MainWindow -- LoginHandler
MainWindow -- LogHandler
MainWindow -- DataHandler
DataHandler -- DbSettings
LoginHandler -- DbSettings
@enduml
